Handling Authentication Through JWT And gRPC

--- a/EomWebApiProject/appsettings.json
+++ b/EomWebApiProject/appsettings.json
@@ -9,8 +9,19 @@
       "DefaultConnection": "Server=127.0.0.1;Database=SongDatabase;User Id=SA;Password=MatinMat8; TrustServerCertificate=True;"
     },
 
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
 
-  
+  "FileSettings":{
+      "SongFilesPath": "Uploads/Songs/",
+      "ImageFilesPath": "Uploads/Images"
+
+
+  },
+
+  "Jwt": {
+    "Key": "aB3$5fG7!kL9@iwureoe%&#*$&%*&shgihgwegho",
+    "Issuer": "127.0.0.1:5002",
+    "Audience": "127.0.0.1:4200"
+  }
   
 }
