--- a/client-app/angular.json
+++ b/client-app/angular.json
@@ -62,6 +62,14 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "prebundle": {
+              "exclude": [
+                "google-protobuf",
+                "google-protobuf/google/protobuf/any_pb.js"
+              ]
+            }
+          },
           "configurations": {
             "production": {
               "buildTarget": "client-app:build:production"
