--- a/client-app/package.json
+++ b/client-app/package.json
@@ -21,9 +21,16 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.2",
+    "@grpc/grpc-js": "^1.11.2",
+    "@grpc/proto-loader": "^0.7.13",
+    "@improbable-eng/grpc-web": "^0.15.0",
+    "@types/google-protobuf": "^3.15.12",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "google-protobuf": "^3.21.4",
+    "grpc-web": "^1.5.0",
     "rxjs": "~7.8.0",
+    "ts-protoc-gen": "^0.15.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
