--- a/client-app/package.json
+++ b/client-app/package.json
@@ -29,6 +29,8 @@
     "express": "^4.18.2",
     "google-protobuf": "^3.21.4",
     "grpc-web": "^1.5.0",
+    "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "ts-protoc-gen": "^0.15.0",
     "tslib": "^2.3.0",
